--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,7 @@ img[src$='#floatleft'] {
   align-items: center;
   justify-content: space-between;
   border-bottom: 3px solid black;
-  padding: 20px 0px;
+  padding: 0px 0px 20px 0px;
   margin-bottom: 40px;
   font-size: 20px;
   font-weight: Bold;
