--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,51 @@ img[src$='#floatleft'] {
   padding-top: 22px;
 }
 
+code {
+  font-style: italic;
+}
+
+code.hljs {
+  font-family: 'JetBrains Mono';
+  border: 1.5px solid black;
+  line-height: 22px !important;
+  background-color: #FFF8EA !important;
+  font-style: normal;
+  font-weight: 700;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  line-height: 20px !important;
+  margin: 15px 0px;
+}
+
+th, td {
+  font-size: 14px;
+  text-align: center !important;
+  border: 1px solid black;
+  padding: 8px;
+  padding-top: 10px;
+}
+
+th {
+  font-weight: bold;
+}
+
+tbody tr:hover {
+  background-color: #D9D9D9;
+}
+
+td:first-child {
+  font-weight: bold;
+  text-align: center;
+}
+
+td:not(:first-child) {
+  text-align: center;
+}
+
 .content-with-comments {
   display: flex;
   gap: 20px;
@@ -75,20 +120,16 @@ img[src$='#floatleft'] {
 
 .post-title-date {
   overflow: hidden;
-  display: -webkit-box;
   -webkit-line-clamp: 1;
   line-clamp: 1;
   -webkit-box-orient: vertical;
-  height: 30px;
 }
 
 .post-title {
   overflow: ellipsis;
-  display: -webkit-box;
   -webkit-line-clamp: 2;
   line-clamp: 2;
   -webkit-box-orient: vertical;
-  height: 30px;
   text-decoration: none;
 }
 
