--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ body {
   font-family: 'JetBrains Mono';
   color: black;
   background-color: #FFF8EA;
-  max-width: 994px;
+  max-width: 1100px;
   margin: 50px auto 10px auto;
   padding: 0px 20px;
 }
@@ -134,7 +134,7 @@ td:not(:first-child) {
 }
 
 .post-footer-text {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: Bold;
   text-decoration: none;
   color: black;
@@ -152,7 +152,7 @@ td:not(:first-child) {
 
 
 .site-footer {
-  font-size: 12px;
+  font-size: 14px;
   text-decoration: none;
   color: black;
   text-align: center;
@@ -238,13 +238,14 @@ td:not(:first-child) {
 
 .block {
   position: relative;
+  margin-bottom: 70px;
 }
 
 .block-body {
   max-width: 994px;
   padding: 12px 20px 10px 20px;
   margin-top: -20px;
-  font-size: 12px;
+  font-size: 14px;
   border: 2px solid black;
 }
 
@@ -252,7 +253,7 @@ td:not(:first-child) {
   width: 146px;
   color: black;
   font-weight: Bold;
-  font-size: 12px;
+  font-size: 14px;
   display: inline-block;
   text-align: center;
   align-content: center;
