Add misc and posts to home page, and content to misc and posts

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,17 @@
 {{ define "main" }}
-<div class="site-header" >
-  <a class="site-title" >Gustavo de Oliveira Ferreira</a>
-  <a class="site-title" >Software Engineer</a>
+<div class="site-header">
+  <a class="site-title">Gustavo de Oliveira Ferreira</a>
+  <a class="site-title">Software Engineer</a>
   <div class="divider"></div>
-  <a class="site-subtitle" >Mobile Developer at Oxeanbits & Computer Science Student at UFBA</a>
-  <a class="site-subtitle-phrase" >I believe in the power of technology to transform simple ideas into incredible</a>
-  <a class="site-subtitle-2" href="/about-me" >More about me <strong>*here*</strong></a>
+  <a class="site-subtitle">Mobile Developer at Oxeanbits & Computer Science Student at UFBA</a>
+  <a class="site-subtitle-phrase">I believe in the power of technology to transform simple ideas into incredible</a>
+  <a class="site-subtitle-2" href="/about-me">More about me <strong>*here*</strong></a>
 </div>
 
 <div class="site-body">
 
-  <div class="block" >
-    <div class="block-title" >Projects</div>
+  <section class="block">
+    <div class="block-title">Projects</div>
     <div class="block-body">
 
       <div class="block-item">
@@ -32,16 +32,45 @@
 
       <div class="block-item">
         <a href="https://github.com/gustoliveira/openest-subtitles" class="block-item-link">
-          <div class="block-item-title" >openest-subtitles</div>
-          <div class="block-description" >Tool to download missing subtitles from opensubtitles.org based in .nfo files</div>
-          <div class="block-after" >Golang, Docker, Bash</div>
+          <div class="block-item-title">openest-subtitles</div>
+          <div class="block-description">Tool to download missing subtitles from opensubtitles.org based in .nfo files
+          </div>
+          <div class="block-after">Golang, Docker, Bash</div>
         </a>
       </div>
 
     </div>
-  </div>
+  </section>
+
+  <section class="block">
+    <div class="block-title">Recent Posts</div>
+    <div class="block-body">
+      {{ range first 5 (where .Site.RegularPages "Type" "posts") }}
+      <div class="block-item">
+        <a href="{{ .Permalink }}" class="block-item-link">
+          <div class="block-item-title" datetime="{{ .Date.Format " 01-02-2006" }}">{{ .Date.Format "2006-01-02" }}
+          </div>
+          <div class="block-description">{{ .Title }}</div>
+        </a>
+      </div>
+      {{ end }}
+    </div>
+  </section>
+
+  <section class="block">
+    <div class="block-title">Miscellaneous</div>
+    <div class="block-body">
+      {{ range first 5 (where .Site.RegularPages "Type" "miscellaneous") }}
+      <div class="block-item">
+        <a href="{{ .Permalink }}" class="block-item-link">
+          <div class="block-item-title">{{ .Title }}</div>
+          <div class="block-description">{{ .Params.Subtitle }}</div>
+        </a>
+      </div>
+      {{ end }}
+    </div>
+  </section>
 
 </div>
 
 {{ end }}
-
