feat: Change color pallete, add colors and font as css variables, add typewriting effect

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="site-header">
   <a class="site-title">Gustavo de Oliveira Ferreira</a>
-  <a class="site-title">Software Engineer</a>
+  <a class="site-title anim-typewriter">Software Engineer</a>
   <div class="divider"></div>
   <a class="site-subtitle">Mobile Developer at Oxeanbits & Computer Science Student at UFBA</a>
   <a class="site-subtitle-phrase">I believe in the power of technology to transform simple ideas into incredible</a>
