--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,10 @@
+:root {
+  --font-family: "JetBrains Mono", monospace;
+  --primary-color: #FFF8EA;
+  --primary-color-accent: #FFCD6A;
+  --primary-color-light: #FAEACA;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -6,9 +13,9 @@ header {
 }
 
 body {
-  font-family: 'JetBrains Mono';
+  font-family: var(--font-family);
   color: black;
-  background-color: #FFF8EA;
+  background-color: var(--primary-color);
   max-width: 1100px;
   margin: 50px auto 10px auto;
   padding: 0px 20px;
@@ -43,10 +50,10 @@ code {
 }
 
 code.hljs {
-  font-family: 'JetBrains Mono';
+  font-family: var(--font-family);
   border: 1.5px solid black;
   line-height: 22px !important;
-  background-color: #FFF8EA !important;
+  background-color: var(--primary-color) !important;
   font-style: normal;
   font-weight: 700;
 }
@@ -62,7 +69,8 @@ table {
   margin: 15px 0px;
 }
 
-th, td {
+th,
+td {
   font-size: 14px;
   text-align: center !important;
   border: 1px solid black;
@@ -75,7 +83,7 @@ th {
 }
 
 tbody tr:hover {
-  background-color: #D9D9D9;
+  background-color: var(--primary-color-light);
 }
 
 td:first-child {
@@ -179,17 +187,6 @@ td:not(:first-child) {
   margin-bottom: 40px;
 }
 
-.site-title {
-  text-align: center;
-  font-size: 20px;
-  font-weight: Bold;
-
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-
 .site-subtitle {
   text-align: center;
   font-size: 16px;
@@ -217,13 +214,13 @@ td:not(:first-child) {
 }
 
 .site-subtitle-2 {
-  text-align: center;
   text-align: end !important;
   text-decoration: none;
   color: black;
   font-size: 16px;
   height: 20px;
   padding-top: 20px;
+  width: fit-content;
 
   display: -webkit-box;
   -webkit-line-clamp: 1;
@@ -270,18 +267,18 @@ td:not(:first-child) {
   left: 22px;
 
   min-height: 20px;
-  background-color: #D9D9D9;
+  background-color: var(--primary-color-light);
 }
 
 .block-item {
-  background-color: #D9D9D9;
+  background-color: var(--primary-color-light);
   margin: 20px 0;
   min-height: 22px;
   transition: background-color 0.2s ease;
 }
 
 .block-item:hover {
-  background-color: #c0c0c0;
+  background-color: var(--primary-color-accent);
   cursor: pointer;
 }
 
@@ -331,4 +328,48 @@ td:not(:first-child) {
   text-decoration: none;
   color: black;
   min-height: 22px;
+}
+
+.site-title {
+  text-align: center;
+  font-size: 20px;
+  font-weight: Bold;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.anim-typewriter {
+  position: relative;
+  width: 204px;
+  border-right: 3px solid orange;
+  margin-left: calc(calc(100% - 204px) / 2);
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+
+  animation: typing 1.8s steps(34, end) 1s 1 normal both,
+    blinking-cursor 700ms steps(34) infinite normal both;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+
+  to {
+    width: 204px
+  }
+}
+
+@keyframes blinking-cursor {
+  from {
+    border-right-color: transparent
+  }
+
+  to {
+    border-right-color: var(--primary-color-accent)
+  }
 }
