--- a/static/css/style.css
+++ b/static/css/style.css
@@ -270,6 +270,11 @@ td:not(:first-child) {
   background-color: var(--primary-color-light);
 }
 
+.block-title:hover {
+  background-color: var(--primary-color-accent);
+  cursor: pointer;
+}
+
 .block-item {
   background-color: var(--primary-color-light);
   margin: 20px 0;
@@ -371,5 +376,90 @@ td:not(:first-child) {
 
   to {
     border-right-color: var(--primary-color-accent)
+  }
+}
+
+.tooltip-text {
+  visibility: hidden;
+  white-space: normal;
+
+  width: inherit;
+  max-width: 400px !important;
+
+  background-color: black;
+  color: white;
+  text-align: justify;
+
+  padding: 10px;
+  border-radius: 10px;
+
+  position: absolute;
+  z-index: 1;
+
+  top: 8px;
+  left: 100%;
+}
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+}
+
+@media screen and (max-width: 500px) {
+  .block-title {
+    width: 146px;
+    color: black;
+    font-weight: Bold;
+    font-size: 14px;
+    display: inline-block;
+    text-align: center;
+    align-content: center;
+
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+
+    position: absolute;
+    top: -10px;
+    left: calc(calc(100% - 150px) / 2);
+
+    min-height: 20px;
+    background-color: var(--primary-color-light);
+  }
+
+  .block-item {
+    background-color: var(--primary-color-light);
+    margin: 20px 0;
+    padding: 10px;
+    min-height: 22px;
+    transition: background-color 0.2s ease;
+  }
+
+  .block-item-link {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .block-item-title {
+    font-weight: Bold;
+    text-align: center;
+    min-width: 150px;
+    overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+    flex: 0 0 auto;
+    margin-bottom: 5px;
+  }
+
+  .block-description {
+    text-align: center;
+    padding: 0 10px;
+    overflow: ellipsis;
+    flex: 1;
+    width: 100%;
+  }
+
+  .tooltip:hover .tooltip-text {
+    display: none;
   }
 }
