fix typo and add transition to hover in block title

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,7 +51,7 @@
     <div class="block-title tooltip">
       Recent Posts
       <span class="tooltip-text">
-        Things I learn, things I do and things I think. Most of what's share here reflects my opinions, which often change over time. You might find something interesting along the way
+        Things I learn, things I do and things I think. Most of what's shared here reflects my opinions, which often change over time. You might find something interesting along the way
       </span>
     </div>
     <div class="block-body">
