--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,6 +268,7 @@ td:not(:first-child) {
 
   min-height: 20px;
   background-color: var(--primary-color-light);
+  transition: background-color 0.2s ease;
 }
 
 .block-title:hover {
