Replace openest-subtitle for veil in home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,11 +36,10 @@
       </div>
 
       <div class="block-item">
-        <a href="https://github.com/gustoliveira/openest-subtitles" class="block-item-link">
-          <div class="block-item-title">openest-subtitles</div>
-          <div class="block-description">Tool to download missing subtitles from opensubtitles.org based in .nfo files
-          </div>
-          <div class="block-after">Golang, Docker, Bash</div>
+        <a href="https://github.com/gustoliveira/veil" class="block-item-link">
+          <div class="block-item-title">veil</div>
+          <div class="block-description">Encrypt files and stores them inside your git repository using ssh keys</div>
+          <div class="block-after">Golang, SSH, Age</div>
         </a>
       </div>
 
